Agregado registrar,login y logout

--- a/AppsServicios/templates/AppsServicios/Inicio.html
+++ b/AppsServicios/templates/AppsServicios/Inicio.html
@@ -7,26 +7,10 @@
 
 {% endif %}
 
-                <!-- Masthead-->
-                <!--<header class="masthead">
-                   <div class="container position-relative">
-                      <div class="row justify-content-center">
-                          <div class="col-xl-6">
-                               <div class="text-center text-white">
-                                    <!-- Page heading-->
-                                   <!-- <h1 class="mb-5">Bienvenidos a la empresa de servicios tecnologicos "Apps Services"</h1>
-                                    <!-- Signup form-->
-                                    <!-- * * * * * * * * * * * * * * *-->
-                                    <!-- * * SB Forms Contact Form * *-->
-                                    <!-- * * * * * * * * * * * * * * *-->
-                                    <!-- This form is pre-integrated with SB Forms.-->
-                                    <!-- To make this form functional, sign up at-->
-                                    <!-- https://startbootstrap.com/solution/contact-forms-->
-                                    <!-- to get an API token!-->
-                                    <form class="form-subscribe" id="contactForm" data-sb-form-api-token="API_TOKEN">
+<h4>Bienvenido a la empresa Apps Services!</h4>
+<img src="{{ user.avatar.imagen.url }}" />
 
-                                       <hr>
- 
+
   <h1 class="text-center"><a href="{% url 'inicio' %}" 
     class="btn btn-outline-primary" > VOLVER</a href ="{% url 'inicio' %}"></h1>
   
