--- a/AppsServicios/templates/AppsServicios/contacto_email.html
+++ b/AppsServicios/templates/AppsServicios/contacto_email.html
@@ -47,7 +47,7 @@
                     </div>
                     <div class="col-lg-6">
                         <h2 class="fw-bolder">Feedback</h2>
-                        <p class="lead fw-normal text-muted mb-0">Su opinión es sumamente importante para nosotros. La interacción con clientes y proveedores nos mantiene en una línea de crecimiento orientada a cubrir las necesidades del sector.</p>
+                        <p class="lead fw-normal text-muted mb-0">Su opinión es muy importante para nosotros, por favor indicarnos las consultas y/o feedback que sean necesarios sobre nuestros servicios</p>
                         <hr>
                         <br>
                                         
