--- a/AppsServicios/templates/AppsServicios/plantilla_base_2.html
+++ b/AppsServicios/templates/AppsServicios/plantilla_base_2.html
@@ -48,9 +48,9 @@
                             {% if user.is_authenticated %}
                                 <p style="color: rgb(255, 255, 255); text-decoration: none; margin-right: 10px; margin-top: 7px;">Bienvenido/a {{user.username}}  </p>
                                 <img src="{% url 'inicio' %}" height="40px" alt="Avatar">
-                                <li class="btn btn-primary" disabled ><a style="color: rgb(255, 255, 255); text-decoration: none" href="{% url 'inicio' %}">LOGOUT</a></li>
+                                <li class="btn btn-primary" disabled ><a style="color: rgb(255, 255, 255); text-decoration: none" href="{% url 'logout' %}">LOGOUT</a></li>
                             {% else %}
-                                <li class="btn btn-primary" disabled ><a style="color: rgb(255, 255, 255); text-decoration: none" href="{% url 'inicio' %}">LOGIN</a></li>
+                                <li class="btn btn-primary" disabled ><a style="color: rgb(255, 255, 255); text-decoration: none" href="{% url 'login' %}">LOGIN</a></li>
                             {% endif %}
 
 
@@ -71,7 +71,7 @@
                     <div class="col-auto">
                         <a class="link-light small" href="{% url 'inicio' %}">Inicio</a>
                         <span class="text-white mx-1">&middot;</span>
-                        <a class="link-light small" href="{% url 'inicio' %}">Nosotros</a>
+                        <a class="link-light small" href="{% url 'acerca_appsservices' %}">Nosotros</a>
                     </div>
                 </div>
             </div>
