--- a/AppsServicios/templates/AppsServicios/contactos.html
+++ b/AppsServicios/templates/AppsServicios/contactos.html
@@ -50,7 +50,7 @@
       </table>
   </center>
 
-  <p> Para agregar un nuevo servicio, click  <a style="text-decoration: none;" href="{% url 'contacto_formulario' %}" class="btn btn-outline-primary">AQUI</a> </p>
+  <p> Para agregar un nuevo contacto, click  <a style="text-decoration: none;" href="{% url 'contacto_formulario' %}" class="btn btn-outline-primary">AQUI</a> </p>
   <hr>
  
   <h1 class="text-center"><a href="{% url 'inicio' %}" 
