--- a/AppsServicios/templates/AppsServicios/login.html
+++ b/AppsServicios/templates/AppsServicios/login.html
@@ -4,7 +4,7 @@
 {% block blockname %}
 <Body>
     <br>
-    <p class="text-center"><img class="rounded-circle" src="https://watermark.lovepik.com/photo/40150/2130.jpg_wh1200.jpg"height="400" alt="..." /></p>
+    <p class="text-center"><img class="rounded-circle" src="http://www.clker.com/cliparts/m/b/C/c/X/D/login-md.png"height="400" alt="..." /></p>
     <hr>
 
 
