--- a/AppsServicios/templates/AppsServicios/logout.html
+++ b/AppsServicios/templates/AppsServicios/logout.html
@@ -5,7 +5,7 @@
 {% block blockname %}
 <body>
     <br>
-    <p class="text-center"><img class="rounded-circle" src="https://watermark.lovepik.com/photo/40150/2130.jpg_wh1200.jpg"height="400"alt="..." /></p>
+    <p class="text-center"><img class="rounded-circle" src="https://st2.depositphotos.com/4103319/6625/i/600/depositphotos_66251761-stock-photo-logout-circular-icon-on-white.jpg"height="400"alt="..." /></p>
     <hr>
     <h1 class="text-center">GRACIAS POR VISITAR APP SERVICES, TE ESPERAMOS PRONTO!</h1>
     <br>
