--- a/AppsServicios/templates/AppsServicios/plantilla_base.html
+++ b/AppsServicios/templates/AppsServicios/plantilla_base.html
@@ -12,7 +12,7 @@
         <meta name="author" content="" />
         <title>Apps Services</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="{% static 'AppsServicios/assets/favicon.ico' %}" />
+        <link rel="icon" type="image/x-icon" href="{% static 'AppsServicios/assets/tecno.ico' %}" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
@@ -40,7 +40,7 @@
                                 <div class="container">
                             </li>
                             <li class="nav-item"><a class="nav-link" href="{% url 'contacto_emails' %}"> | Contacto | </a></li>
-                            <li class="nav-item"><a class="nav-link" href="{% url 'acerca_appsservices' %}">Acerca de Coder-Pharma | </a></li>
+                            <li class="nav-item"><a class="nav-link" href="{% url 'acerca_appsservices' %}">Acerca de Apps Services | </a></li>
                             <li class="nav-item"><a class="nav-link" href="{% url 'inicio' %}">Directorio | </a></li>
                             {% if user.is_authenticated %}
                             <p style="color: rgb(255, 255, 255); text-decoration: none; margin-right: 10px; margin-top: 7px;">Bienvenido/a {{user.username}}  </p>
