modificacion de inicio, Pillow agregado a requirements

--- a/AppsServicios/templates/AppsServicios/Inicio.html
+++ b/AppsServicios/templates/AppsServicios/Inicio.html
@@ -8,7 +8,7 @@
 {% endif %}
 
 <h4>Bienvenido a la empresa Apps Services!</h4>
-<img src="{{ user.avatar.imagen.url }}" />
+<img src="{{ user.avatar.imagen.url }}" width="" height="400px" alt="Avatar" />
 
 
   <h1 class="text-center"><a href="{% url 'inicio' %}" 
