--- a/AppsServicios/templates/AppsServicios/Acerca_AppsServices.html
+++ b/AppsServicios/templates/AppsServicios/Acerca_AppsServices.html
@@ -10,7 +10,7 @@
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="http://www.nubit.es/wp-content/uploads/2016/04/tecnologia-tactil.png" alt="..." /></div>
                     <div class="col-lg-6">
-                        <h2 class="fw-bolder">¿Como nos conocen?</h2>
+                        <h2 class="fw-bolder">¿Cómo nos conocen?</h2>
                         <p class="lead fw-normal text-muted mb-0">Somos una compañía con años de trayectoria en el desarrollo de servicios tecnologicos.
                             Nuestra principal mision ayudar a nuestros clientes a implementar su mejor desarrollo automatizado.</p>                      
                 </div>
