--- a/AppsServicios/templates/AppsServicios/about.html
+++ b/AppsServicios/templates/AppsServicios/about.html
@@ -10,9 +10,9 @@
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="http://www.nubit.es/wp-content/uploads/2016/04/tecnologia-tactil.png" alt="..." /></div>
                     <div class="col-lg-6">
-                        <h2 class="fw-bolder">Yermary</h2>
-                        <p class="lead fw-normal text-muted mb-0">texto.
-                            Mas texto.</p>                      
+                        <h2 class="fw-bolder">Yermary Gonzalez</h2>
+                        <p class="lead fw-normal text-muted mb-0">Developer -
+                            Estudiante de Python 2022 Coder House.</p>                      
                 </div>
             </div>
         </section>
@@ -23,8 +23,8 @@
                 <div class="row gx-5 align-items-center">
                         <div class="col-lg-6 order-first order-lg-last"><img class="img-fluid rounded mb-5 mb-lg-0" src="https://www.bitmag.com.br/wp-content/uploads/2013/11/tech-and-innovation-e1384887416643-600x513.jpg" alt="..." /></div>
                         <div class="col-lg-6">
-                                <h2 class="fw-bolder">Tobias</h2>
-                                <p class="lead fw-normal text-muted mb-0">texto.</p>
+                                <h2 class="fw-bolder">Tobias Carballo</h2>
+                                <p class="lead fw-normal text-muted mb-0">Developer - Estudiante de Python 2022 Coder House.</p>
                         </div>
                 </div>
             </div>
