--- a/AppsServicios/templates/AppsServicios/contacto_email.html
+++ b/AppsServicios/templates/AppsServicios/contacto_email.html
@@ -13,7 +13,7 @@
 </head>
 
     <br>
-    <p class="text-center"><img class="rounded-circle" src="https://watermark.lovepik.com/photo/40150/2130.jpg_wh1200.jpg"height="400"alt="..." /></p>
+    <p class="text-center"><img class="rounded-circle" src="http://www.windowspcdownload.com/wp-content/uploads/2017/03/1488416430-gB0-oLAFwnJfrXC7izwlcUhdv6tQHbGYWWjndu0T5_JT6H1dYb57EtgmreBSk0BJBww300.png"height="400"alt="..." /></p>
     <hr>
     <br>
     <div class="text-center mb-5">
@@ -57,6 +57,21 @@
     </section>
         <hr>
         <h1 class="text-center"><a href="{% url 'inicio' %}" class="btn btn-outline-primary" disabled> VOLVER </a></h1> 
+    
+    </center>
+    <h1 class="text-center"><a href="{% url 'contactos' %}" 
+    class="btn btn-outline-primary" > Ir a Contactos</a href ="{% url 'inicio' %}"></h1>
+    </center>
+    
+    </center>
+    <h1 class="text-center"><a href="{% url 'tecnologias' %}" 
+    class="btn btn-outline-primary" > Ir a Tecnologias</a href ="{% url 'inicio' %}"></h1>
+    </center>
+    
+    </center>
+    <h1 class="text-center"><a href="{% url 'servicios' %}" 
+    class="btn btn-outline-primary" > Ir a Servicios</a href ="{% url 'inicio' %}"></h1>
+    </center>
         <hr>
 </body>
 </html>
