--- a/AppsServicios/templates/AppsServicios/form_buscar.html
+++ b/AppsServicios/templates/AppsServicios/form_buscar.html
@@ -4,7 +4,7 @@
 <form method="GET">
   {% csrf_token %}
   <span>Tecnologia:
-    <input type="integer" name="nombre">
+    <input type="integer" name="Nombre" />
   </span>
   <input type="submit" value="Buscar" />
 </form>
