--- a/AppsServicios/templates/AppsServicios/form_servicios.html
+++ b/AppsServicios/templates/AppsServicios/form_servicios.html
@@ -5,19 +5,11 @@
 
 <form method="post">
     {% csrf_token %}
-
-    <p>Nombre:
-        <input type="text" name="nombre">
-    </p>
-
-    <p>Valor:
-        <input type="text" name="valor">
-    </p>
-
-    <p>Tiempo:
-        <input type="text" name="tiempo">
-    </p>
+    {{ formulario.as_p }}
+    
+    
     <input type="submit"name="Enviar" />
 </form>
 
+<p><a href="{% url 'inicio' %}" class="btn btn-outline-primary" disabled> VOLVER </a></p>
 {% endblock blockname %} 
