--- a/AppsServicios/templates/AppsServicios/form_tecnologias.html
+++ b/AppsServicios/templates/AppsServicios/form_tecnologias.html
@@ -5,15 +5,10 @@
 
 <form method="post">
     {% csrf_token %}
-
-    <p>Nombre:
-    <input type="text" name="nombre">
-    </p>
-    <p> Version:
-    <input type="text" name="version">
-    </p>
-    <input type="submit"name="Enviar" />
-
+    {{ formulario.as_p }}
+    
+    <input type="submit" value="Enviar" />
 </form>
+<p><a href="{% url 'inicio' %}" class="btn btn-outline-primary" disabled> VOLVER </a></p>
 
 {% endblock blockname %} 
